--- a/cloud-config-server/src/main/resources/bootstrap.yml
+++ b/cloud-config-server/src/main/resources/bootstrap.yml
@@ -6,5 +6,12 @@ spring:
     config:
       server:
         git:
-          uri:  
+          uri:  https://github.com/NicoAponce/spring-project.git
+          search-paths: config-data
+          username: ${GIT_USER}
+          passphrase: ${GIT_PASSWORD}
+  security:
+    user:
+      name: root
+      password: s3cr3t
 
