--- a/cloud-config-server/src/main/resources/bootstrap.yml
+++ b/cloud-config-server/src/main/resources/bootstrap.yml
@@ -6,12 +6,12 @@ spring:
     config:
       server:
         git:
-          uri:  https://github.com/NicoAponce/spring-project.git
-          search-paths: config-data
+          uri: https://github.com/NicoAponce/spring-project.git
+          searchPaths: config-data
           username: ${GIT_USER}
-          passphrase: ${GIT_PASSWORD}
+          password: ${GIT_PASSWORD}
+          default-label: "master"
   security:
     user:
       name: root
       password: s3cr3t
-
