--- a/api-rest-product/pom.xml
+++ b/api-rest-product/pom.xml
@@ -27,12 +27,11 @@
 		</dependency>
 		-->
 
-		<!--
-			<dependency>
+		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-config</artifactId>
+			<version>2.2.5.RELEASE</version>
 		</dependency>
-		-->
 
 		<!--
 		<dependency>
