--- a/config-data/customer-service.yml
+++ b/config-data/customer-service.yml
@@ -10,3 +10,7 @@ spring:
     username: sa
     password:
     driverClassName: org.h2.Driver
+eureka:
+  client:
+    service-url:
+      default-zone: http://localhost:8004/eureka/
