--- a/api-rest-shopping/pom.xml
+++ b/api-rest-shopping/pom.xml
@@ -72,6 +72,12 @@
 			<version>2.2.5.RELEASE</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+			<version>2.2.5.RELEASE</version>
+		</dependency>
+
 	</dependencies>
 
 	<build>
