--- a/config-data/shopping-service.yml
+++ b/config-data/shopping-service.yml
@@ -1,16 +1,44 @@
+#Application Configuration
 server:
   port: 8003
+  error:
+    include-message: always
+    include-binding-errors: always
+
+# To See H2 Console in Browser:
+# http://localhost:8092/h2-console
+# Enabling H2 Console
 spring:
   h2:
     console:
       enabled: true
-      path: /h2
+  # ===============================
+  # DB
+  # ===============================
   datasource:
-    url: jdbc:h2:file:~/test
+    url: jdbc:h2:mem:customerDB;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+    driverClassName: org.h2.Driver
+    platform: h2
     username: sa
     password:
-    driverClassName: org.h2.Driver
+
+  # ===============================
+  # JPA / HIBERNATE
+  # ===============================
+  jpa:
+    show-sql: true
+    hibernate:
+      ddl-auto: update
+    database-platform: org.hibernate.dialect.H2Dialect
+    properties:
+      hibernate:
+        show_sql: true
+        use_sql_comments: false
+        format_sql: false
+logging:
+  pattern:
+    console: "%d{yyyy-MM-dd HH:mm:ss} ${LOG_LEVEL_PATTERN:-%5p} %m%n"
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:8004/eureka/
+      defaultZone: http://localhost:8761/eureka/
