--- a/gateway-service/src/main/resources/bootstrap.yml
+++ b/gateway-service/src/main/resources/bootstrap.yml
@@ -3,8 +3,7 @@ spring:
     name: gateway-service
   cloud:
     config:
-      uri:
-        - http://localhost:8888
+      uri: http://localhost:8888
       username: root
       password: s3cr3t
 
