--- a/config-data/gateway-service.yml
+++ b/config-data/gateway-service.yml
@@ -1,17 +1,14 @@
 server:
-    port: 9999
+  port: 9999
   eureka:
     client:
       service-url:
         defaultZone: http://localhost:8761/eureka/
-  spring:
-    cloud:
-      gateway:
-        discovery:
-          locator:
-            enabled: true
-        routes:
-          - id: customer-service
-            uri: lb://customer-service
-            predicates:
-              - Path=/customers/**
+spring:
+  cloud:
+    gateway:
+      routes:
+        - id: customer-service
+          uri: lb://customer-service:8002
+          predicates:
+            - Path=/customers/**
