--- a/gateway-service/src/main/resources/bootstrap.yml
+++ b/gateway-service/src/main/resources/bootstrap.yml
@@ -1,18 +1,9 @@
-server:
-  port: 9999
-eureka:
-  client:
-    service-url:
-      defaultZone: http://localhost:8761/eureka/
 spring:
+  application:
+    name: gateway-service
   cloud:
-    gateway:
-      discovery:
-        locator:
-          enabled: true
-      routes:
-        - id: customer-service
-          uri: lb://customer-service
-          predicates:
-            - Path=/customers/**
+    config:
+      uri: http://localhost:8888
+      username: root
+      password: s3cr3t
 
