--- a/config-data/shopping-service.yml
+++ b/config-data/shopping-service.yml
@@ -42,7 +42,7 @@ eureka:
   client:
     serviceUrl:
       defaultZone: http://localhost:8761/eureka/
-feign:
+Feign:
   hystrix:
     enabled: true
 management:
