--- a/api-rest-customer/pom.xml
+++ b/api-rest-customer/pom.xml
@@ -78,6 +78,18 @@
 			<version>2.2.5.RELEASE</version>
 		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-actuator</artifactId>
+			<version>2.3.4.RELEASE</version>
+		</dependency>
+
+		<dependency>
+			<groupId>de.codecentric</groupId>
+			<artifactId>spring-boot-admin-starter-client</artifactId>
+			<version>2.3.0</version>
+		</dependency>
+
 
 	</dependencies>
 
