--- a/api-rest-product/pom.xml
+++ b/api-rest-product/pom.xml
@@ -20,12 +20,12 @@
 	</properties>
 
 	<dependencies>
-		<!--
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-actuator</artifactId>
+			<version>2.3.4.RELEASE</version>
 		</dependency>
-		-->
 
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
@@ -91,6 +91,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
 			<version>2.3.4.RELEASE</version>
+		</dependency>
+
+		<dependency>
+			<groupId>de.codecentric</groupId>
+			<artifactId>spring-boot-admin-starter-client</artifactId>
+			<version>2.3.0</version>
 		</dependency>
 
 	</dependencies>
