--- a/api-rest-shopping/src/main/resources/bootstrap.yml
+++ b/api-rest-shopping/src/main/resources/bootstrap.yml
@@ -7,3 +7,8 @@ spring:
         - http://localhost:8888
       username: root
       password: s3cr3t
+  boot:
+    admin:
+      client:
+        url:
+          - http://localhost:8006
